# Podio-CLI

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: plan-cli-compliance-fixes.md
podio-py/pypodio2/: areas.py  transport.py
podio_cli/: __init__.py  client.py  config.py  main.py  output.py
podio_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
podio_cli/commands/: app.py  auth.py  comment.py  conversation.py  file.py  item.py  org.py  space.py  task.py  webform.py  webhook.py
